--- a/index.html
+++ b/index.html
@@ -107,9 +107,9 @@
                   </ul>
                   <div class="menu-bottom">
                     <a class="media-collection" href="#">媒體專區</a>
-                    <div class="search">
+                    <form class="search">
                       <label class="search-icon icon-search"></label><input class="search-input" placeholder="搜尋">
-                    </div>
+                    </form>
                     <ul class="social-nav">
                       <li>
                         <a class="facebook icon-facebook" href="#"></a>
