--- a/volunteers/thanks/index.html
+++ b/volunteers/thanks/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html><html lang="zh-TW"><head><meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible"><meta charset="utf-8"><meta content="width=device-width, initial-scale=1, maximum-scale=1" name="viewport"><link href="/stylesheets/all.css" media="screen" rel="stylesheet" type="text/css" />
 <link href="/vendor/icomoon/style.css" media="screen" rel="stylesheet" type="text/css" /><script src="/vendor/modernizr.custom.76886.js" type="text/javascript"></script><script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js" type="text/javascript"></script>
+<script src="/vendor/lazysizes.js" type="text/javascript"></script>
 <script src="/vendor/macho.js" type="text/javascript"></script>
 <script src="/vendor/jquery.waypoints.min.js" type="text/javascript"></script>
 <script src="/vendor/jquery.waypoints.sticky.min.js" type="text/javascript"></script>
